--- a/src/config/i18n/locales/ua.translation.json
+++ b/src/config/i18n/locales/ua.translation.json
@@ -1,6 +1,9 @@
 {
   "homePage": {
-    "welcome": "Дууже файне вітаннячко"
+    "welcome": "Вітаю вас у своєму портфоліо!",
+    "subWelcome": "Тут ви знайдете колекцію моїх минулих проектів, досвіду та навичок.",
+    "describeHeader": "Трішечкі про мене",
+    "describe": "Моя пристрасть полягає в розробці інтерактивних та динамічних веб-додатків, Я маю досвід роботи з різними front-end технологіями, такими як React, React Native. Крім того, я вивчаю серверні фреймворки, такі як Node.js та Express.js. Протягом своєї кар'єри я працював з клієнтами з різних галузей та секторів, надаючи рішення для їхніх конкретних потреб. Моя мета - продовжувати вчитися і вдосконалювати свої навички, беручи участь у цікавих та інноваційних"
   },
   "portfolio`": {
     "title": "Туточки буде опис моїх скілів"
