feat:(portfolio) empty page

--- a/src/config/i18n/locales/en.translation.json
+++ b/src/config/i18n/locales/en.translation.json
@@ -6,8 +6,9 @@
     "describe": "My passion lies in developing interactive and dynamic web applications, I have experience with various front-end technologies such as React, React Native. In addition, I am learning server-side frameworks such as Node.js and Express.js. Throughout my career, I have worked with clients from various industries and sectors, providing solutions for their specific needs. My goal is to continue learning and improving my skills by participating in interesting and innovative"
 
   },
-  "portfolio`": {
-    "title": "Some very interesting headline"
+  "portfolio": {
+    "error": "Oooops!",
+    "title": "The page is currently under revision"
   },
   "contact": {
     "title": "relevant contacts"
